# AI_Cull_Share_Eventize

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  jenkinsfile  pyproject.toml  supervisord.conf
alembic/: env.py
alembic/versions/: 08a5a965092a_fixed_timezone_issue_in_temporary_.py  0a24e2682db8_updated_smart_share_folder_model_.py  0e9a12e82498_added_culling_in_progress_feild_in_.py  113f6ad504a6_do_some_changes_in_culledimagesmetadata_.py  1217b0cfb497_create_user_image_metadata_token_folder_.py  1d53d589f964_create_user_token_image_meta_data_.py  1f98f61eee7e_marked_id_as_uuid_in_folder_in_s3_table.py  20560bfce18b_fixed_association_between_secondary_.py  23a72ab04b11_add_detection_status_in_imagesmetadata_.py  26d859caac1b_added_association_table_between_smart_.py  27075edb6104_updated_culling_folder_model_and_added_.py  274db7cafe26_fixed_association_between_secondary_.py  367e006058da_added_temporary_presigned_image_urls_.py  369a43c3f15a_culling_done_feild_in_folder_in_s3_.py  39c68a32cfd4_remove_tmporary_url_table_and_add_a_.py  39e6233322cb_added_cover_image_in_.py  3c8382660e09_updated_user_schema_becuase_added_clerk.py  448c2777f75a_create_user_token_folder_in_s3_images_.py  478256ca4882_changed_smartshareimagesmetadata_model_.py  5e4fef5969d4_added_culling_done_table_marke_it_true_.py  5ea00f38a7d2_linked_association_table_with_user.py  64fc824be757_permit_updated_at_to_be_null_in_token_.py  6633b12beb34_created_temporary_presigned_image_urls_.py  69302641c856_initial_neondn_migration.py  72dab99f5ade_added_status_feild_in_smartshare_folder.py  7600b4fba3b4_updated_user_schema_changed_phone_to_.py  7a5ea95e98e2_created_book_event_tabel.py  7f7161cfc625_added_upload_in_progress_and_upload_.py  8c4ce78fb6c7_update_created_at_column_to_use_timezone.py  8f867158758f_added_contact_us_model.py  9add804f9e09_update_temp_images_url_table.py  9e9fc3bae825_changed_model_of_event_arrangment_form.py  a431622b68f1_converted_temporaryimageurl_validity_to_.py  a99515ece463_fixed_the_problem_when_any_smart_share_.py  b411f9d4d08f_fixed_contact_us_model.py  (+14 more)
src/Celery/: config.py  utils.py
(+99 files in other folders)
