[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["all"], version = "^0.111.1"}
alembic = "1.13.2"
pytest = "8.2.2"
pillow = "10.4.0"
opencv-python = "4.10.0.84"
sqlalchemy = "2.0.31"
authlib = "1.3.1"
transformers = {version = "4.42.4", extras = ["torch"]}
accelerate = "0.32.1"
boto3 = "1.34.147"
celery = "^5.4.0"
tensorflow = "^2.17.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}
flower = "^2.0.1"
redis = "^5.0.8"
sse-starlette = "^2.1.3"
qdrant-client = "^1.11.0"
scikit-learn = "^1.5.1"
torchvision = "^0.19.0"
mtcnn = "^0.1.1"
clip = {git = "https://github.com/openai/CLIP.git", rev = "main"}
open-clip-torch = "^2.26.1"
sentence-transformers = "^3.0.1"
asyncpg = "^0.29.0"
pytest-mock = "^3.14.0"
tf-keras = "^2.17.0"
clerk-backend-api = "^1.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.2"
asgiref = "^3.8.1"
facenet-pytorch = "2.5.3"
qrcode = {extras = ["pil"], version = "^8.0"}
psycopg2-binary = "^2.9.10"
opencv-python-headless = "^4.11.0.86"
faiss-cpu = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
